# LinqPadSnippets

./: .gitignore  .pre-commit-config.yaml  AccessLocalMRU.linq  DumpOrg.linq  DumpTypedEmail.ps1  Flickr.linq  FlurlOneNote.linq  FlurlOwly.linq  IFTTTTrigger.linq  InLineReplyCurrentEmailContent.linq  Onenote_HTML_2_Markdown_HTML.linq  README.md  ReadCurrentEmailContent.linq  RestSharpAndBitLy.linq  RestSharpAzureTextAnalysisML.linq  RestSharpOwly.linq  RestfitSharpOwly.linq  TfsSlackBot.linq  UIThreadBlocking.linq  WoflToHTMLList.linq  createSearchFolder.linq  csvplay.linq  dropTargetDecoding.linq  editUsingCurrentEditor.linq  observableVariableInterval.linq  package-lock.json  package.json  playRant.linq  startEmailFromTemplate.linq  uiAutomationWithWhite.linq  writeUrlToPageToOneNote.linq
JavaScript/: chimeTitle.js
js/: DetectBackButton.html
plantuml/: play.wsd
python/: Pipfile  checklinks.sh  concurrentdownload.py  docpuller.yaml  dump_grateful.py  dump_hyperdiv_docs.py  fix-utf8.py  generate-onenote-template-nightly.py  gpt3.py  linkchecker.py  pandas_weight.py  pdf-scratch.py  pyproject.toml  ring-video-doorbell.py  rss_uniq.py  shachecksum.py  text_similar.py  zachage.py
python/YtsRssUniqAzureFunc/: requirements.txt
racket/: sicp.rkt
scriptcs/: ZachAge.csx
